added js to responsive menu so it opens and closes links in smaller devices

--- a/index.css
+++ b/index.css
@@ -85,7 +85,11 @@ section {
         display: none;
     }
 
+    .showLinks {
+        display: flex;
+        justify-content: flex-start;
 
+    }
 }
 
 /*nav {
