nav works with transition, adding profile picture

--- a/index.css
+++ b/index.css
@@ -3,18 +3,18 @@
 }
 
 nav {
-    overflow: hidden;
     background-color: #ddd;
     width: 100%;
     position: fixed;
     top: 0;
-
+    display: block;
     z-index: 1;
 }
 
 body {
     padding: 0;
     margin: 0;
+    background-color: #f7f7f7;
 }
 
 /*.white-section {
@@ -51,7 +51,7 @@ li a {
 }
 
 .links {
-    justify-content: flex-end;
+    justify-content: flex-start;
 }
 
 .sandwich {
@@ -74,19 +74,34 @@ li a {
     margin: 15px;
 }
 
+#hero {
+    min-height: 60vh;
+    max-width: 100%;
+    background: linear-gradient(to bottom right, #58FFDC, #58B2DC);
+}
+
+/*#profile-picture {
+    width: 250px;
+    height: auto;
+    z-index: 0;
+}*/
+
 section {
     margin: auto;
-    display: block;
+    display: flex;
+    flex-direction: column;
     padding-top: 50px;
     max-width: 800px;
     position: relative;
 }
 
 img {
-    display: flex;
+    display: block;
+    position: relative;
     margin: auto;
     max-width: 800px;
     max-height: 400px;
+    z-index: -1;
 }
 
 #contact > a {
@@ -101,34 +116,17 @@ p {
     margin: 0;
 }
 
-img {
-  color: #fff;
-  background-color: #333;
-  transition: all 0.2s ease-out;
-} 
-
-img:hover,
-img:focus {
-  filter: brightness(50%);
-  background-color: #fff;
-}
-
-.img-wrapper {
+.project-section {
+    display: table;
+    transition: .25s ease;
     position: relative;
+    margin: auto;
+    margin-bottom: 50px;
 }
 
-.img-overlay {
-    position: absolute;
-    top: 50%;
-    left: 0;
-    right: 0;
-    text-align: center;
-}
-
-.img-overlay:before {
-    content: ' ';
-    display: block;
-    height: 50%;
+.project-section:hover {
+    transition: 0.25s ease;
+    background-color: rgba(0,0,0,0.45);
 }
 
 .project-link {
@@ -139,13 +137,73 @@ img:focus {
     display: inline-block;
     width: 80px;
     height: 30px;
+    position: absolute;
+    background-color: rgba(0,0,0,0.65);
+    bottom: 50%;
+    color: white;
+    opacity: 0;
+    transition: opacity .25s ease;
+    text-align: center;
 }
 
+.project-section a:nth-of-type(1) {
+    left: 15%;
+}
+
+.project-section a:nth-of-type(2) {
+    left: 55%;
+}
+
+.project-section:hover a {
+    opacity: 1;
+    transition: .25s ease;
+}
+
+.project-info {
+    margin: auto;
+    width: 300px;
+}
+
+.section-title {
+    order: 1;
+}
+
+.project-section {
+    order: 2;
+}
+
+.project-description {
+    order: 3;
+}
+
+.project-technologies {
+    order: 4;
+}
+
+.fa {
+    text-decoration: none;
+    color: black;
+    transition: .1s ease;
+}
+
+.fa-linkedin-square:hover {
+    color: #0077B5;
+    transition: .1s ease;
+}
+
+h2 {
+    text-align: center;
+}
 
 @media (max-width: 500px) {
+
     section {
         position: relative;
         width: 90%;
+    }
+
+    #hero {
+        width: 100%;
     }
 
     ul {
@@ -163,12 +221,24 @@ img:focus {
     }
 
     .links {
-        display: none;
+        opacity: 0;
+        transition: all .25s ease;
+        height: 0;
+        padding: 0;
+        overflow: hidden;
+        width: 90%;
+        margin: auto;
     }
 
     .showLinks {
+        height: 50px;
+        opacity: 1;
+        padding: auto;
+        transition: all .25s ease;
         display: flex;
         justify-content: flex-start;
+        margin: auto;
+        width: 90%;
     }
 
     #desktop-screenshot {
@@ -176,9 +246,14 @@ img:focus {
     }
 
     .project-link {
-        padding: 1px 5px;
-        font-size: 12px;
+        padding: 5px;
+        font-size: 20px;
         line-height: 1.5;
         border-radius: 3px;
+    }
+
+    .project-section:focus a {
+        opacity: 1;
+        transition: .25s ease;
     }
 }
