--- a/index.css
+++ b/index.css
@@ -1,14 +1,15 @@
 * {
     font-family: 'Roboto', sans-serif;
+    line-height: 1.5;
 }
 
 nav {
-    background-color: #ddd;
     width: 100%;
     position: fixed;
     top: 0;
     display: block;
     z-index: 1;
+    transition: .25s;
 }
 
 body {
@@ -31,6 +32,17 @@ body {
     left: 0;
 }
 
+#name {
+    font-size: 40px;
+    margin-bottom: 0;
+}
+
+#occupation {
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-size: 18px;
+}
+
 ul {
     display: flex;
     flex-flow: row wrap;
@@ -48,6 +60,27 @@ li a {
     display: flex;
     text-decoration: none;
     padding: 14px 16px;
+    position: relative;
+    text-transform: uppercase;
+    font-size: 12px;
+    letter-spacing: 1.5px;
+    color: black;
+}
+
+li a:hover::after {
+    /*opacity: 1;*/
+    width: 100%;
+}
+
+li a::after {
+    content: "";
+    position: absolute;
+    bottom: 3px;
+    left: 0;
+    width: 0;
+    height: 2px;
+    background: #0076AC;
+    transition: width .25s;
 }
 
 .links {
@@ -77,21 +110,15 @@ li a {
 #hero {
     min-height: 60vh;
     max-width: 100%;
-    background: linear-gradient(to bottom right, #58FFDC, #58B2DC);
+    background: linear-gradient(to bottom right, #2EA9DF, white);
 }
-
-/*#profile-picture {
-    width: 250px;
-    height: auto;
-    z-index: 0;
-}*/
 
 section {
     margin: auto;
     display: flex;
     flex-direction: column;
-    padding-top: 50px;
-    max-width: 800px;
+    padding: 50px;
+    max-width: 1000px;
     position: relative;
 }
 
@@ -100,84 +127,77 @@ img {
     position: relative;
     margin: auto;
     max-width: 800px;
-    max-height: 400px;
+    height: auto;
     z-index: -1;
+}
+
+.hero-text {
+    max-width: 1000px;
+    width: 100%;
+    display: block;
+    margin: auto;
+    color: white;
+}
+
+
+
+#desktop-screenshot {
+    max-height: 300px;
+    width: 100%;
+    max-width: 415px;
+}
+
+.mobile-screenshot {
+    max-height: 400px;
 }
 
 #contact > a {
     text-decoration: none;
 }
 
-.section-title {
+.project-title {
     text-align: center;
 }
 
 p {
     margin: 0;
+    margin-bottom: 15px;
 }
 
-.project-section {
-    display: table;
+.project-image {
     transition: .25s ease;
     position: relative;
     margin: auto;
-    margin-bottom: 50px;
-}
-
-.project-section:hover {
-    transition: 0.25s ease;
-    background-color: rgba(0,0,0,0.45);
 }
 
 .project-link {
-    background: #e3e3e3;
-    border: 1px solid #bbb;
-    border-radius: 3px;
+    border-radius: 2px;
     text-decoration: none;
     display: inline-block;
-    width: 80px;
-    height: 30px;
-    position: absolute;
-    background-color: rgba(0,0,0,0.65);
+    background-color: #2EA9DF;
     bottom: 50%;
     color: white;
-    opacity: 0;
-    transition: opacity .25s ease;
     text-align: center;
+    padding: 10px 20px;
+    text-transform: uppercase;
+    box-shadow: 1px 2px 10px rgba(0, 0, 0, .2);
+    transition: .25s;
 }
 
-.project-section a:nth-of-type(1) {
-    left: 15%;
+/*button press*/
+
+.project-link:hover {
+    background-color: #1590C6;
+    box-shadow: none;
+    transition: .25s;  
 }
 
-.project-section a:nth-of-type(2) {
-    left: 55%;
-}
-
-.project-section:hover a {
-    opacity: 1;
-    transition: .25s ease;
+.project-link:active {
+    background-color: #0076AC;
 }
 
 .project-info {
-    margin: auto;
-    width: 300px;
-}
-
-.section-title {
-    order: 1;
-}
-
-.project-section {
-    order: 2;
-}
-
-.project-description {
-    order: 3;
-}
-
-.project-technologies {
-    order: 4;
+    margin-left: 50px;
 }
 
 .fa {
@@ -191,19 +211,42 @@ p {
     transition: .1s ease;
 }
 
+.projects {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
 h2 {
     text-align: center;
+}
+
+.project-left, .project-right {
+    width: 50%;
+    margin: auto;
+}
+
+#project-1 {
+    padding-top: 0;
+}
+
+.project-links {
+    text-align: center;
+}
+
+.nav-background {
+    background-color: #A8DAF0;
+    transition: .25s;
 }
 
 @media (max-width: 500px) {
 
     section {
         position: relative;
-        width: 90%;
     }
 
-    #hero {
-        width: 100%;
+    .project-info {
+        margin: 0;
     }
 
     ul {
@@ -237,6 +280,7 @@ h2 {
         transition: all .25s ease;
         display: flex;
         justify-content: flex-start;
+        align-items: center;
         margin: auto;
         width: 90%;
     }
@@ -246,14 +290,11 @@ h2 {
     }
 
     .project-link {
-        padding: 5px;
-        font-size: 20px;
         line-height: 1.5;
         border-radius: 3px;
     }
 
-    .project-section:focus a {
-        opacity: 1;
-        transition: .25s ease;
+    .project-left, .project-right {
+        width: 100%;
     }
 }
