--- a/index.css
+++ b/index.css
@@ -18,14 +18,6 @@ body {
     background-color: #f7f7f7;
 }
 
-/*.white-section {
-    background-color: #bbb;
-}
-
-.gray-section {
-    background-color: #ddd;
-}*/
-
 .brand {
     display: flex;
     justify-content: flex-start;
@@ -75,7 +67,7 @@ li a:hover::after {
 li a::after {
     content: "";
     position: absolute;
-    bottom: 3px;
+    bottom: 0;
     left: 0;
     width: 0;
     height: 2px;
@@ -139,7 +131,13 @@ img {
     color: white;
 }
 
+#about-me {
+    padding-bottom: 0;
+}
 
+#projects-header {
+    padding-top: 50px;
+}
 
 #desktop-screenshot {
     max-height: 300px;
@@ -253,6 +251,10 @@ h2 {
         flex-direction: column;
 
         justify-content: flex-start;
+    }
+
+    nav {
+        background-color: white;
     }
 
     .sandwich {
