--- a/index.css
+++ b/index.css
@@ -179,7 +179,6 @@ p {
     text-align: center;
     padding: 10px 20px;
     text-transform: uppercase;
-    box-shadow: 1px 2px 10px rgba(0, 0, 0, .2);
     transition: .25s;
 }
 
@@ -208,6 +207,10 @@ p {
 .fa-linkedin-square:hover {
     color: #0077B5;
     transition: .1s ease;
+}
+
+#email-link {
+    color: #2EA9DF;
 }
 
 .projects {
