--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 * {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     line-height: 1.5;
 }
 
@@ -15,7 +15,7 @@ nav {
 body {
     padding: 0;
     margin: 0;
-    background-color: #f7f7f7;
+    background-color: #27363B;
 }
 
 .brand {
@@ -77,6 +77,7 @@ li a::after {
 
 .links {
     justify-content: flex-start;
+    color: white;
 }
 
 .sandwich {
@@ -102,7 +103,7 @@ li a::after {
 #hero {
     min-height: 60vh;
     max-width: 100%;
-    background: linear-gradient(to bottom right, #2EA9DF, white);
+    background: #41AFA8;
 }
 
 section {
@@ -139,10 +140,8 @@ img {
     padding-top: 50px;
 }
 
-#desktop-screenshot {
-    max-height: 300px;
+.desktop-screenshot {
     width: 100%;
-    max-width: 415px;
 }
 
 .mobile-screenshot {
@@ -153,14 +152,22 @@ img {
     text-decoration: none;
 }
 
-.project-title {
-    text-align: center;
-}
-
 p {
     margin: 0;
     margin-bottom: 15px;
-    text-align: center;
+    color: white;
+}
+
+.project-title {
+    color: white;
+}
+
+h2 {
+    color: white;
+}
+
+h3 {
+    color: white;
 }
 
 .project-image {
@@ -173,7 +180,7 @@ p {
     border-radius: .15em;
     text-decoration: none;
     display: inline-block;
-    background-color: #2EA9DF;
+    background-color: #41AFA8;
     bottom: 50%;
     color: white;
     text-align: center;
@@ -185,13 +192,13 @@ p {
 /*button press*/
 
 .project-link:hover {
-    background-color: #1590C6;
+    background-color: #28968F;
     box-shadow: none;
     transition: .25s;  
 }
 
 .project-link:active {
-    background-color: #0076AC;
+    background-color: #0E7C75;
 }
 
 .project-info {
@@ -200,6 +207,11 @@ p {
 
 .fa {
     text-decoration: none;
+    color: white;
+    transition: .1s ease;
+}
+
+.fa-github:hover {
     color: black;
     transition: .1s ease;
 }
@@ -210,17 +222,15 @@ p {
 }
 
 #email-link {
-    color: #2EA9DF;
+    color: #41AFA8;
 }
 
 .projects {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-}
-
-h2 {
-    text-align: center;
+    padding-left: 0;
+    padding-right: 0;
 }
 
 .project-left, .project-right {
@@ -232,18 +242,13 @@ h2 {
     padding-top: 0;
 }
 
-.project-links {
-    text-align: center;
-}
-
 .nav-background {
-    background-color: #A8DAF0;
+    background-color: #41AFA8;
     transition: .25s;
 }
 
 .project-technologies {
     display: block;
-    text-align: center;
 }
 
 /*Styling technologies I used*/
@@ -253,11 +258,11 @@ h2 {
     border-radius: .15em;
     padding: .125rem .75rem;
     margin: .25rem 0;
-    background-color: #E8E8E8;
-    color: #9e9e9e;
+    background-color: #567C82;
+    color: white;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 1000px) {
 
     section {
         position: relative;
@@ -307,7 +312,7 @@ h2 {
         width: 90%;
     }
 
-    #desktop-screenshot {
+    .desktop-screenshot {
         width: 100%;
     }
 
