--- a/index.css
+++ b/index.css
@@ -71,7 +71,7 @@ li a::after {
     left: 0;
     width: 0;
     height: 2px;
-    background: #0076AC;
+    background: #0E7C75;
     transition: width .25s;
 }
 
